modified input fields on index and region page

--- a/html/stylesheets/region.css
+++ b/html/stylesheets/region.css
@@ -22,6 +22,12 @@ body {
 	border: none;
 }
 
+#searchbar input[type=text]:focus {
+	outline: none;
+	color: #eee;
+	background: rgba(79, 79, 79, 0.9);
+}
+
 ::-webkit-input-placeholder {
 	color: #888;
 }
