--- a/html/stylesheets/region.css
+++ b/html/stylesheets/region.css
@@ -71,6 +71,12 @@ body {
 	margin-bottom: 0;
 }
 
+#titlearea a, #titlearea a:visited, #titlearea a:hover {
+	font: inherit;
+	color: inherit;
+	text-decoration: inherit;
+}
+
 #titlearea button {
 	background: #fff;
 	font: inherit;
