--- a/html/stylesheets/region.css
+++ b/html/stylesheets/region.css
@@ -40,11 +40,16 @@ body {
 	color: #888;
 }
 
+#banner {
+	width: 100%;
+	background: linear-gradient(to right, #aee0ff, #3faef3);
+}
+
 #titlearea {
 	width: 700px;
-	margin: 80px auto;
+	margin: 0 auto;
 	text-align: center;
-	padding: 20px;
+	padding: 120px 20px 80px 20px;
 }
 
 #titlearea h1 {
@@ -61,7 +66,7 @@ body {
 #titlearea h2 {
 	font-family: "Montserrat", sans-serif;
 	font-size: 72px;
-	color: #333;
+	color: #fff;
 	margin: 20px 0;
 }
 
