--- a/html/stylesheets/region.css
+++ b/html/stylesheets/region.css
@@ -82,25 +82,29 @@ body {
 	text-decoration: inherit;
 }
 
-#titlearea button {
+button {
 	background: #fff;
 	font: inherit;
 	border: 2px solid #4f4f4f;
-	padding: 8px 0;
-	width: 240px;
+	padding: 8px 20px;
 	cursor: pointer;
 }
 
-#titlearea button:hover {
+#titlearea button {
+	padding: 8px 0;
+	width: 240px;
+}
+
+button:hover {
 	background: #eee;
 	border-color: #2a79f8;
 }
 
-#titlearea button:active {
+button:active {
 	background: #ccc;
 }
 
-.post {
+.postitem {
 	width: 1000px;
 	margin: 40px auto;
 	padding-bottom: 40px;
@@ -108,7 +112,7 @@ body {
 	line-height: 1.3;
 }
 
-.post h1 {
+.postitem h1 {
 	font-family: "Montserrat", sans-serif;
 	font-size: 48px;
 	color: #333;
@@ -128,4 +132,65 @@ a, a:visited {
 
 a:hover {
 	text-decoration: none;
+}
+
+#post_form {
+	padding: 0;
+	border: 0;
+	height: 0;
+	overflow: hidden;
+	transition: height 1s;
+}
+
+.formsection {
+	margin: 30px 0;
+}
+
+#post_form input[type=text] {
+	font: inherit;
+	color: #4f4f4f;
+	display: block;
+	background: #fff;
+	border: none;
+	border-bottom: 2px solid #ccc;
+	padding: 4px;
+	margin: 18px 0;
+	box-sizing: border-box;
+	width: 380px;
+}
+
+#post_form input[type=text]:hover {
+	border-color: #2a79f8;
+}
+
+#post_form input[type=text]:focus {
+	border-color: #2a79f8;
+	background: #eee;
+	outline: none;
+}
+
+#post_form #titlebox {
+	width: 100%;
+	font-family: "Montserrat", sans-serif;
+	font-size: 36px;
+	font-weight: 700;
+	color: #333;
+}
+
+#post_form textarea {
+	background: #eee;
+	font: inherit;
+	color: #4f4f4f;
+	border: none;
+	border-bottom: 2px solid #eee;
+	margin: 0;
+	padding: 8px;
+	box-sizing: border-box;
+	width: 100%;
+	height: 320px;
+}
+
+#post_form textarea:hover, #post_form textarea:focus {
+	border-color: #2a79f8;
+	outline: none;
 }
