region page .php document, checks and displays region

--- a/html/stylesheets/region.css
+++ b/html/stylesheets/region.css
@@ -43,6 +43,8 @@ body {
 #banner {
 	width: 100%;
 	background: linear-gradient(to right, #aee0ff, #3faef3);
+	background-size: cover;
+	background-position: center;
 }
 
 #titlearea {
