--- a/html/stylesheets/region.css
+++ b/html/stylesheets/region.css
@@ -9,7 +9,7 @@ body {
 	position: fixed;
 	top: 80px;
 	left: 50%;
-	width: 300px;
+	width: 280px;
 	margin-left: -520px;
 }
 
@@ -27,7 +27,8 @@ body {
 #sidebar h2 {
 	font-family: "Montserrat", sans-serif;
 	font-size: 36px;
-	margin: 20px 0;
+	color: #333;
+	margin: 28px 0;
 }
 
 #sidebar h2 img {
@@ -36,34 +37,44 @@ body {
 	margin-right: 8px;
 }
 
-#sidebar a, #sidebar a:visited, #sidebar a:hover {
+#sidebar h1 a, #sidebar h1 a:visited, #sidebar h1 a:hover {
 	font: inherit;
 	color: inherit;
 	text-decoration: inherit;
 }
 
-button {
+button, .button, .button:visited {
+	display: inline-block;
 	background: #fff;
 	font: inherit;
+	color: #4f4f4f;
+	text-decoration: none;
 	border: 2px solid #4f4f4f;
 	padding: 8px 20px;
 	cursor: pointer;
+	text-align: center;
 }
 
-#sidebar button {
+#sidebar .button {
 	display: block;
 	margin: 18px 0;
 	padding: 8px 0;
 	width: 100%;
 }
 
-button:hover {
+.button:hover, button:hover {
 	background: #eee;
 	border-color: #2a79f8;
 }
 
-button:active {
+.button:active, button:active {
 	background: #ccc;
+}
+
+#copyright {
+	font-size: 16px;
+	color: #aaa;
+	margin-top: 30px;
 }
 
 #content {
@@ -78,7 +89,7 @@ button:active {
 	margin: 0 0 40px 0;
 	padding-bottom: 22px;
 	border-bottom: 1px solid #ccc;
-	line-height: 1.3;
+	line-height: 1.5;
 }
 
 .postitem h1 {
@@ -93,6 +104,18 @@ button:active {
 	font-weight: 700;
 	padding: 8px;
 	box-sizing: border-box;
+}
+
+.postitem .postcontent h1 {
+	font-size: 28px;
+	color: #4f4f4f;
+}
+
+.postitem .postcontent h2 {
+	font-family: "Arimo", sans-serif;
+	font-size: 24px;
+	text-decoration: underline;
+	color: #4f4f4f;
 }
 
 a, a:visited {
@@ -163,4 +186,9 @@ a:hover {
 #post_form textarea:hover, #post_form textarea:focus {
 	border-color: #2a79f8;
 	outline: none;
+}
+
+#navigation {
+	margin: 40px 0;
+	text-align: center;
 }
