--- a/html/stylesheets/region.css
+++ b/html/stylesheets/region.css
@@ -181,6 +181,7 @@ a:hover {
 	box-sizing: border-box;
 	width: 100%;
 	height: 320px;
+	resize: none;
 }
 
 #post_form textarea:hover, #post_form textarea:focus {
