--- a/html/stylesheets/region.css
+++ b/html/stylesheets/region.css
@@ -1,12 +1,14 @@
 body {
 	font-family: "Arimo", sans-serif;
 	font-size: 20px;
-	color: #4f4f4f;
 	margin: 0;
 }
 
 #sidebar {
 	display: none;
+}
+/*
+#sidebar {
 	position: fixed;
 	top: 80px;
 	left: 50%;
@@ -44,18 +46,6 @@ body {
 	text-decoration: inherit;
 }
 
-button, .button, .button:visited {
-	display: inline-block;
-	background: #fff;
-	font: inherit;
-	color: #4f4f4f;
-	text-decoration: none;
-	border: 2px solid #4f4f4f;
-	padding: 8px 20px;
-	cursor: pointer;
-	text-align: center;
-}
-
 #sidebar .button {
 	display: block;
 	margin: 18px 0;
@@ -77,6 +67,18 @@ button, .button, .button:visited {
 	color: #aaa;
 	margin-top: 30px;
 }
+*/
+button, .button, .button:visited {
+	display: inline-block;
+	background: #fff;
+	font: inherit;
+	color: #4f4f4f;
+	text-decoration: none;
+	border: 2px solid #4f4f4f;
+	padding: 8px 20px;
+	cursor: pointer;
+	text-align: center;
+}
 
 #content {
 	width: 700px;
@@ -86,14 +88,12 @@ button, .button, .button:visited {
 .postitem {
 	margin: 0 0 40px 0;
 	padding-bottom: 22px;
-	border-bottom: 8px solid #000;
 	line-height: 1.5;
 }
 
 .postitem h1 {
 	font-family: "Roboto Condensed", sans-serif;
 	font-size: 48px;
-	color: #000;
 	margin: 0;
 	text-align: center;
 }
@@ -102,28 +102,23 @@ button, .button, .button:visited {
 	font-weight: 700;
 	padding: 8px;
 	margin-top: 0;
-	color: #000;
-	border-bottom: 1px solid #000;
 	text-align: center;
 	box-sizing: border-box;
 }
 
 .postitem .postcontent h1 {
 	font-size: 28px;
-	color: #4f4f4f;
 }
 
 .postitem .postcontent h2 {
 	font-family: "Arimo", sans-serif;
 	font-size: 24px;
 	text-decoration: underline;
-	color: #4f4f4f;
 }
 
 .postitem img {
 	display: block;
 	max-width: 700px;
-	border: 1px solid #000;
 	margin: 0 auto;
 }
 
