fixed image borders

--- a/html/stylesheets/theme_night.css
+++ b/html/stylesheets/theme_night.css
@@ -11,7 +11,11 @@ body {
 	color: #fff;
 }
 
-.postinfo, .postitem img {
+.postinfo {
 	color: #fff;
 	border-bottom: 1px solid #fff;
+}
+
+.postitem img {
+	border: 1px solid #fff;
 }
