--- a/html/stylesheets/theme_day.css
+++ b/html/stylesheets/theme_day.css
@@ -11,7 +11,11 @@ body {
 	color: #000;
 }
 
-.postinfo, .postitem img {
+.postinfo {
 	color: #000;
 	border-bottom: 1px solid #000;
+}
+
+.postitem img {
+	border: 1px solid #000;
 }
