--- a/html/stylesheets/region.css
+++ b/html/stylesheets/region.css
@@ -204,3 +204,44 @@ button, .button, .button:visited {
 	cursor: pointer;
 	text-align: center;
 }
+
+@media only screen and (max-width: 740px) {
+	#topcontainer {
+		width: 100%;
+		padding: 0 20px;
+		margin: 0;
+		box-sizing: border-box;
+	}
+
+	#topbuttons {
+		display: block;
+		float: none;
+	}
+
+	#content {
+		width: 100%;
+		padding: 0 20px;
+		margin: 120px 0 0 0;
+		box-sizing: border-box;
+	}
+
+	.postitem img {
+		max-width: 100%;
+	}
+
+	#nextpage, #prevpage {
+		position: static;
+		top: 0;
+		right: 0;
+		margin: 0;
+		padding: 0 60px;
+	}
+
+	#nextpage {
+		float: right;
+	}
+
+	#prevpage {
+		float: left;
+	}
+}
