--- a/stylesheets/region.css
+++ b/stylesheets/region.css
@@ -1,6 +1,8 @@
 body {
+	background: #fff;
 	font-family: "Arimo", sans-serif;
 	font-size: 20px;
+	color: #4f4f4f;
 	margin: 0;
 }
 
@@ -87,6 +89,11 @@ a.topbutton:hover {
 	font-size: 100px;
 	font-weight: 700;
 	text-decoration: none;
+	color: #4f4f4f;
+}
+
+.pagearrow a:hover {
+	color: #000;
 }
 
 /*Content Area*/
@@ -99,6 +106,7 @@ a.topbutton:hover {
 .postitem {
 	margin: 0 0 40px 0;
 	padding-bottom: 22px;
+	border-bottom: 8px solid #000;
 	line-height: 1.5;
 }
 
@@ -107,6 +115,7 @@ a.topbutton:hover {
 	font-size: 48px;
 	margin: 0;
 	text-align: center;
+	color: #000;
 }
 
 .postinfo {
@@ -115,6 +124,8 @@ a.topbutton:hover {
 	margin-top: 0;
 	text-align: center;
 	box-sizing: border-box;
+	color: #000;
+	border-bottom: 1px solid #000;
 }
 
 .postitem .postcontent h1 {
@@ -125,12 +136,14 @@ a.topbutton:hover {
 	font-family: "Arimo", sans-serif;
 	font-size: 24px;
 	text-decoration: underline;
+	color: #000;
 }
 
 .postitem img {
 	display: block;
 	max-width: 700px;
 	margin: 0 auto;
+	border: 1px solid #000;
 }
 
 #footer {
@@ -161,6 +174,9 @@ a.topbutton:hover {
 	margin: 18px 0;
 	box-sizing: border-box;
 	width: 380px;
+	background: #fff;
+	color: #4f4f4f;
+	border-bottom: 2px solid #eee;
 }
 
 #post_form input[type=text]:hover {
@@ -178,6 +194,7 @@ a.topbutton:hover {
 	font-family: "Roboto Condensed", sans-serif;
 	font-size: 36px;
 	font-weight: 700;
+	color: #000;
 }
 
 #post_form textarea {
@@ -189,6 +206,9 @@ a.topbutton:hover {
 	width: 100%;
 	height: 320px;
 	resize: none;
+	background: #eee;
+	color: #4f4f4f;
+	border-bottom: 2px solid #eee;
 }
 
 #post_form textarea:hover, #post_form textarea:focus {
@@ -203,6 +223,18 @@ button, .button, .button:visited {
 	padding: 8px 20px;
 	cursor: pointer;
 	text-align: center;
+	background: #fff;
+	color: #4f4f4f;
+	border: 2px solid #4f4f4f;
+}
+
+.button:hover, button:hover {
+	background: #eee;
+	border-color: #2a79f8;
+}
+
+.button:active, button:active {
+	background: #ccc;
 }
 
 @media only screen and (max-width: 740px) {
